# mperf-profiler

./: .gitignore  CMakeLists.txt  README.md  cpi_profiler.c  cpi_profiler.cpp  cpi_profiler.h  main.c
.cache/clangd/index/: cpi_profiler.c.85F19825C27243A8.idx  cpi_profiler.cpp.848CDFA42E496DD2.idx  cpi_profiler.h.08B159A51CD2368A.idx  main.c.BDAB4E2494E3CAED.idx
core/: CMakeLists.txt  MPerf.cpp  MPerf.hpp
include/: Dummy.hpp  HWLoc.hpp  LibKPMPerf.hpp  LinuxPerf.hpp  MPerf.hpp  Measure.hpp
include/MPerf/: Core.hpp  KokkosTools.hpp
include/MPerf/Tracers/: CPPChrono.hpp  LibPFM4.hpp  LinuxPerf.hpp
kokkos_tools/: CMakeLists.txt
kokkos_tools/perf_proc/: CMakeLists.txt  PerfProc.cpp
kokkos_tools/region_cpi/: CMakeLists.txt  RegionCPI.cpp  Test.cpp
kokkos_tools/resource_vector/: CMakeLists.txt  ResourceVector.cpp
kokkos_tools/trace_all/: CMakeLists.txt  TraceAll.cpp
src/: Dummy.cpp  HWLoc.cpp  LibKPMPerf.cpp  LinuxPerf.cpp  LinuxPerfProc.cpp  MPerf.cpp  Measure.cpp  Test.cpp
tracers/cppchrono/: CMakeLists.txt  CPPChrono.cpp
tracers/libpfm4/: CMakeLists.txt  IntelSkylake.hpp  LibPFM4.cpp
tracers/linuxperf/: AllCPUEvents.cpp  AllCPUEvents.hpp  CMakeLists.txt  CPUEvents.hpp  CacheEvents.hpp  L1DCacheEvents.cpp  L1DCacheEvents.hpp  LinuxPerf.cpp  ProcMeasure.cpp  ProcMeasure.hpp  Tracer.cpp  Tracer.hpp
